# dice_roller

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/: lexer.py
src/expr_dice_roller/: __init__.py  dice_roller.py  evaluator.py  lexer.py  modifiers.py  parser.py
tests/: repl.py
