[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "expr_dice_roller"
version = "0.0.1"
authors = [
    { name = "HellishBro" }
]
license-files = [
    "LICENSE"
]
keywords = [
    "dice", "expressions"
]
description = "Unofficial port of dice-roller/rpg-dice-roller to Python."
dependencies = [
    "build>=1.4.0",
    "setuptools>=77.0.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HellishBro/dice_roller"
