[build-system]
requires = [
    "build>=1.4.0",
    "setuptools>=77.0.3",
    "twine>=6.2.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "expr_dice_roller"
version = "0.0.4"
authors = [
    { name = "HellishBro" }
]
license-files = [
    "LICENSE"
]
readme = "README.md"
keywords = [
    "dice", "expressions"
]
description = "A dice roller expression language with function support."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HellishBro/dice_roller"
